# Cavitation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: codecheck.yaml
cavitation/: data_stats.py  data_visualization.py  nn_model_visualization.py  svm_experiments.py  svm_model.py  train_model.py  visualize_model.py
cavitation/configs/: config.yaml  data_visualization_config.yaml  nn_model_visualization_config.yaml  svm_model_config.yaml
cavitation/data/: data_visualization.py  get_data.py
cavitation/data/configs/: config.yaml
